tests/ui/aggregate_types/fail/count_as_nullable.stderr
error[E0277]: the trait bound `for<'r> (): drizzle_core::row::ColumnTypeCompatible<Row<'r>, i64, std::option::Option<i64>>` is not satisfied
  --> tests/ui/aggregate_types/fail/count_as_nullable.rs:29:10
   |
29 |         .all()
   |          ^^^ the trait `for<'r> drizzle_core::row::ColumnTypeCompatible<Row<'r>, i64, std::option::Option<i64>>` is not implemented for `()`
   |
   = help: `()` implements trait `drizzle_core::row::ColumnTypeCompatible<Row, Expected, Actual>`:
             drizzle_core::row::ColumnTypeCompatible<Row, T, T>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, bool>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, i16>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, i32>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, i8>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, isize>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, u16>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, u32>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, u64>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, u8>
             drizzle_core::row::ColumnTypeCompatible<Row, i64, usize>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<bool>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<i16>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<i32>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<i8>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<isize>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<u16>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<u32>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<u64>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<u8>>
             drizzle_core::row::ColumnTypeCompatible<Row, std::option::Option<i64>, std::option::Option<usize>>
   = note: required for `Cons<i64, Nil>` to implement `for<'r> drizzle_core::row::TypeListCompatible<Row<'r>, Cons<std::option::Option<i64>, Nil>>`
   = note: required for `SelectCols<(AliasedExpr<SQLExpr<'_, SQLiteValue<'_>, drizzle::sqlite::types::Integer, drizzle::core::expr::NonNull, Agg>>,)>` to implement `for<'r> MarkerColumnCountValid<Row<'r>, (i64,), CountRow>`
   = note: 1 redundant requirement hidden
   = note: required for `Scoped<SelectCols<(AliasedExpr<SQLExpr<'_, SQLiteValue<'_>, drizzle::sqlite::types::Integer, drizzle::core::expr::NonNull, Agg>>,)>, Cons<User, Nil>>` to implement `for<'r> MarkerColumnCountValid<Row<'r>, (i64,), CountRow>`
note: required by a bound in `drizzle::builder::sqlite::rusqlite::<impl drizzle::builder::sqlite::common::DrizzleBuilder<'_, drizzle::builder::sqlite::common::Drizzle<Connection, S>, S, drizzle::sqlite::builder::QueryBuilder<'_, Schema, State, Table, Mk, Rw, Grouped>, State>>::all`
  --> src/builder/sqlite/rusqlite/mod.rs
   |
   |     pub fn all<R, Proof, AggProof>(self) -> drizzle_core::error::Result<Vec<R>>
   |            --- required by a bound in this associated function
...
   |             + drizzle_core::row::MarkerColumnCountValid<::rusqlite::Row<'r>, Rw, R>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `drizzle::builder::sqlite::rusqlite::<impl DrizzleBuilder<'_, Drizzle<Connection, S>, S, QueryBuilder<'_, Schema, State, Table, Mk, Rw, Grouped>, State>>::all`
